vector-databases/qdrant/standalone/05-qdrant-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qdrant-service
  labels:
    app: qdrant
spec:
  type: ClusterIP
  selector:
    app: qdrant
  ports:
    - name: 6333-tcp
      protocol: TCP
      port: 6333
      targetPort: 6333
    - name: 6334-tcp
      protocol: TCP
      port: 6334
      targetPort: 6334
