vector-databases/qdrant/standalone/06-qdrant-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: qdrant-route
  labels:
    app: qdrant
spec:
  to:
    kind: Service
    name: qdrant-service
    weight: 100
  port:
    targetPort: 6333-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
